@@ -43,54 +43,6 @@ Debug 0
 
 # DebugFile "/tmp/debug-ibmtts"
 
-# -- VOICES --
-
-# Maps a language code and standard Speech Dispatcher voice to an
-# IBM TTS voice dialect.
-# See the Speech Dispatcher manual for standard voice names.
-# The Dialect must be one of the dialects listed in the DIALECTS section below.
-
-#        Lang Voice     Dialect
-#        ---- --------- ------------------------
-AddVoice "en" "male1"   "GeneralAmericanEnglish"
-AddVoice "en" "male2"   "BritishEnglish"
-AddVoice "es" "male1"   "CastilianSpanish"
-AddVoice "es" "male2"   "MexicanSpanish"
-AddVoice "fr" "male1"   "StandardFrench"
-AddVoice "fr" "male2"   "CanadianFrench"
-AddVoice "de" "male1"   "StandardGerman"
-AddVoice "it" "male1"   "StandardItalian"
-AddVoice "zh" "male1"   "MandarinChinese"
-AddVoice "zh" "male2"   "MandarinChineseGB"
-AddVoice "zh" "male3"   "MandarinChinesePinYin"
-#AddVoice "zh" "male1"   "MandarinChineseUCS"
-#AddVoice "zh" "male1"   "TaiwaneseMandarin"
-#AddVoice "zh" "male2"   "TaiwaneseMandarinBig5"
-#AddVoice "zh" "male3"   "TaiwaneseMandarinZhuYin"
-#AddVoice "zh" "male1"   "TaiwaneseMandarinPinYin"
-#AddVoice "zh" "male2"   "TaiwaneseMandarinUCS"
-AddVoice "pt" "male1"   "BrazilianPortuguese"
-AddVoice "jp" "male1"   "StandardJapanese"
-AddVoice "jp" "male2"   "StandardJapaneseSJIS"
-AddVoice "jp" "male3"   "StandardJapaneseUCS"
-AddVoice "fi" "male1"   "StandardFinnish"
-AddVoice "ko" "male1"   "StandardKorean"
-AddVoice "ko" "male2"   "StandardKoreanUHC"
-AddVoice "ko" "male3"   "StandardKoreanUCS"
-#AddVoice "zh" "male1"   "StandardCantonese"
-#AddVoice "zh" "male2"   "StandardCantoneseGB"
-#AddVoice "zh" "male3"   "StandardCantoneseUCS"
-AddVoice "zh" "male1"   "HongKongCantonese"
-AddVoice "zh" "male2"   "HongKongCantoneseBig5"
-AddVoice "zh" "male3"   "HongKongCantoneseUCS"
-AddVoice "nl" "male1"   "StandardDutch"
-AddVoice "nn" "male1"   "StandardNorwegian"
-AddVoice "sv" "male1"   "StandardSwedish"
-AddVoice "da" "male1"   "StandardDanish"
-AddVoice "xx" "male1"   "StandardReserved"
-AddVoice "th" "male1"   "StandardThai"
-AddVoice "th" "male2"   "StandardThaiTIS"
-
 # -- VOICE PARAMETERS --
 
 # This table provides a mechanism for fine-tuning the voices used for synthesis.
@@ -140,53 +92,6 @@ IbmttsVoiceParameters  "child_male"     0   0  35  85  35   0    50
 # female3           Elderly Female (notice there is no Adult Female 3)
 # child_male        none provided (that is why it is uncommented, by default)
 # child_female      Child
-
-# -- DIALECTS --
-# Do not change these unless you know what you are doing.
-# These codes are hard-coded in the IBM TTS engine.
-# See ech.h in IBM TTS SDK.
-
-#             Dialect                        Code (Hex)   encoding
-#             -----------------------------  ----------- ---------
-IbmttsDialect "NODEFINEDCODESET"             "00000000"    "cp1252"
-IbmttsDialect "GeneralAmericanEnglish"       "00010000"    "cp1252"
-IbmttsDialect "BritishEnglish"               "00010001"    "cp1252"
-IbmttsDialect "CastilianSpanish"             "00020000"    "cp1252"
-IbmttsDialect "MexicanSpanish"               "00020001"    "cp1252"
-IbmttsDialect "StandardFrench"               "00030000"    "cp1252"
-IbmttsDialect "CanadianFrench"               "00030001"    "cp1252"
-IbmttsDialect "StandardGerman"               "00040000"    "cp1252"
-IbmttsDialect "StandardItalian"              "00050000"    "cp1252"
-IbmttsDialect "MandarinChinese"              "00060000"    "utf-16"
-IbmttsDialect "MandarinChineseGB"            "00060000"    "utf-16"
-IbmttsDialect "MandarinChinesePinYin"        "00060100"    "utf-16"
-IbmttsDialect "MandarinChineseUCS"           "00060800"    "utf-16"
-IbmttsDialect "TaiwaneseMandarin"            "00060001"    "utf-16"
-IbmttsDialect "TaiwaneseMandarinBig5"        "00060001"    "utf-16"
-IbmttsDialect "TaiwaneseMandarinZhuYin"      "00060101"    "utf-16"
-IbmttsDialect "TaiwaneseMandarinPinYin"      "00060201"    "utf-16"
-IbmttsDialect "TaiwaneseMandarinUCS"         "00060801"    "utf-16"
-IbmttsDialect "BrazilianPortuguese"          "00070000"    "cp1252"
-IbmttsDialect "StandardJapanese"             "00080000"    "utf-16"
-IbmttsDialect "StandardJapaneseSJIS"         "00080000"    "utf-16"
-IbmttsDialect "StandardJapaneseUCS"          "00080800"    "utf-16"
-IbmttsDialect "StandardFinnish"              "00090000"    "cp1252"
-IbmttsDialect "StandardKorean"               "000A0000"    "utf-16"
-IbmttsDialect "StandardKoreanUHC"            "000A0000"    "utf-16"
-IbmttsDialect "StandardKoreanUCS"            "000A0800"    "utf-16"
-IbmttsDialect "StandardCantonese"            "000B0000"    "utf-16"
-IbmttsDialect "StandardCantoneseGB"          "000B0000"    "utf-16"
-IbmttsDialect "StandardCantoneseUCS"         "000B0800"    "utf-16"
-IbmttsDialect "HongKongCantonese"            "000B0001"    "utf-16"
-IbmttsDialect "HongKongCantoneseBig5"        "000B0001"    "utf-16"
-IbmttsDialect "HongKongCantoneseUCS"         "000B0801"    "utf-16"
-IbmttsDialect "StandardDutch"                "000C0000"    "cp1252"
-IbmttsDialect "StandardNorwegian"            "000D0000"    "cp1252"
-IbmttsDialect "StandardSwedish"              "000E0000"    "cp1252"
-IbmttsDialect "StandardDanish"               "000F0000"    "cp1252"
-IbmttsDialect "StandardReserved"             "00100000"    "cp1252"
-IbmttsDialect "StandardThai"                 "00110000"    "utf-16"
-IbmttsDialect "StandardThaiTIS"              "00110000"    "utf-16"
 
 # -- KEY NAME SUBSTITUTIONS --
 
